Bug 1293057 - Add compartment checking assertions to promise API r=till